<resources>
    <string name="app_name">SafeWalk</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account_signin">Already have an account! SignIn</string>
    <string name="signup1">Signup</string>
</resources>